welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:8: error: not found: value x
  	x=x+1;
        ^Program:12: error: not found: value x
	        for(k <- 1 to x){
                              ^